--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
-    steps:cluster0.deys8ga.mongodb.net
+    steps:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Cache dependencies
