--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,11 +7,12 @@ on:
 env:
   MONGODB_DB_NAME: kube
 jobs:
+  environment: testing # This is the name of the environment on GitHub
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.deys8ga.mongodb.net
-      MONGODB_USERNAME: max
-      MONGODB_PASSWORD: NHmMdvu1AaOFYWY6
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
