--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ env:
   MONGODB_DB_NAME: kube
 jobs:
   test:
-    environment: testing # This is the name of the environment on GitHub
+    environment: testing # This is the name of the environment defined on GitHub
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.deys8ga.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
